// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldText disabled  with label inline 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
  background: #F5F6F7;
  color: #939BA5;
}

.c6:hover {
  border-color: #DEE1E5;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c8 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c8 .c7 {
  grid-area: messages;
}

.c8 .c5 {
  width: 13rem;
}

.c8 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c11 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c10 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      disabled={true}
      id="FieldTextID"
      name="thumbsUp"
      type="text"
    />
  </div>
  <div
    className="c7 "
  />
</div>
`;

exports[`A FieldText disabled with default label 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
  background: #F5F6F7;
  color: #939BA5;
}

.c6:hover {
  border-color: #DEE1E5;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c11 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c10 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c8 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c8 .c7 {
  grid-area: messages;
}

.c8 .c5 {
  width: 13rem;
}

.c8 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      disabled={true}
      id="FieldTextID"
      name="thumbsUp"
      type="text"
    />
  </div>
  <div
    className="c7 "
  />
</div>
`;

exports[`A FieldText required  with label inline 1`] = `
.c5 {
  height: 36px;
}

.c5::-webkit-input-placeholder {
  color: #939BA5;
}

.c5::-moz-placeholder {
  color: #939BA5;
}

.c5:-ms-input-placeholder {
  color: #939BA5;
}

.c5::placeholder {
  color: #939BA5;
}

.c5:hover {
  border-color: #C1C6CC;
}

.c5:focus,
.c5:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c7 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c3 {
  color: #CC1F36;
}

.c9 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c9 .c8 {
  grid-area: messages;
}

.c9 .c6 {
  width: 13rem;
}

.c9 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c8 {
  grid-area: messages;
}

.c0 .c6 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
    <span
      aria-hidden="true"
      className="c3"
    >
       
      *
    </span>
  </label>
  <div
    className="c4 "
  >
    <input
      className="c5 c6 c7 "
      id="FieldTextID"
      name="thumbsUp"
      required={true}
      type="text"
    />
  </div>
  <div
    className="c8 "
  />
</div>
`;

exports[`A FieldText required with default label 1`] = `
.c5 {
  height: 36px;
}

.c5::-webkit-input-placeholder {
  color: #939BA5;
}

.c5::-moz-placeholder {
  color: #939BA5;
}

.c5:-ms-input-placeholder {
  color: #939BA5;
}

.c5::placeholder {
  color: #939BA5;
}

.c5:hover {
  border-color: #C1C6CC;
}

.c5:focus,
.c5:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c7 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c3 {
  color: #CC1F36;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c8 {
  grid-area: messages;
}

.c0 .c6 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c9 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c9 .c8 {
  grid-area: messages;
}

.c9 .c6 {
  width: 13rem;
}

.c9 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
    <span
      aria-hidden="true"
      className="c3"
    >
       
      *
    </span>
  </label>
  <div
    className="c4 "
  >
    <input
      className="c5 c6 c7 "
      id="FieldTextID"
      name="thumbsUp"
      required={true}
      type="text"
    />
  </div>
  <div
    className="c8 "
  />
</div>
`;

exports[`A FieldText with default label 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c8 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c10 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c9 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      id="FieldTextID"
      name="thumbsUp"
      type="text"
    />
  </div>
  <div
    className="c7 "
  />
</div>
`;

exports[`A FieldText with description and with default label 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c8 {
  font-size: 0.75rem;
  line-height: 1rem;
  margin-top: 0.5rem;
  color: #707781;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c9 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c9 .c7 {
  grid-area: messages;
}

.c9 .c5 {
  width: 13rem;
}

.c9 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      id="FieldTextID"
      name="thumbsUp"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <div
    className="c7 "
  >
    <p
      className="c8"
      color="palette.charcoal500"
      fontSize="xsmall"
    >
      no vegetables allowed
    </p>
  </div>
</div>
`;

exports[`A FieldText with description and with label inline 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c8 {
  font-size: 0.75rem;
  line-height: 1rem;
  margin-top: 0.5rem;
  color: #707781;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c9 .c7 {
  grid-area: messages;
}

.c9 .c5 {
  width: 13rem;
}

.c9 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      id="FieldTextID"
      name="thumbsUp"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <div
    className="c7 "
  >
    <p
      className="c8"
      color="palette.charcoal500"
      fontSize="xsmall"
    >
      no vegetables allowed
    </p>
  </div>
</div>
`;

exports[`A FieldText with detail and  with label inline 1`] = `
.c6 {
  height: 36px;
}

.c6::-webkit-input-placeholder {
  color: #939BA5;
}

.c6::-moz-placeholder {
  color: #939BA5;
}

.c6:-ms-input-placeholder {
  color: #939BA5;
}

.c6::placeholder {
  color: #939BA5;
}

.c6:hover {
  border-color: #C1C6CC;
}

.c6:focus,
.c6:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c8 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1rem;
}

.c10 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c10 .c9 {
  grid-area: messages;
}

.c10 .c7 {
  width: 13rem;
}

.c10 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c10 .c3 {
  grid-area: detail;
  justify-self: end;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c9 {
  grid-area: messages;
}

.c0 .c7 {
  width: 13rem;
}

.c0 .c11 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c3 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c12 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <span
    className="c3 c4"
    fontSize="xsmall"
  >
    5/50
  </span>
  <div
    className="c5 "
  >
    <input
      className="c6 c7 c8 "
      id="FieldTextID"
      name="thumbsUp"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <div
    className="c9 "
  />
</div>
`;

exports[`A FieldText with detail and with default label 1`] = `
.c6 {
  height: 36px;
}

.c6::-webkit-input-placeholder {
  color: #939BA5;
}

.c6::-moz-placeholder {
  color: #939BA5;
}

.c6:-ms-input-placeholder {
  color: #939BA5;
}

.c6::placeholder {
  color: #939BA5;
}

.c6:hover {
  border-color: #C1C6CC;
}

.c6:focus,
.c6:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c8 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c9 {
  grid-area: messages;
}

.c0 .c7 {
  width: 13rem;
}

.c0 .c11 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c3 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c12 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c10 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c10 .c9 {
  grid-area: messages;
}

.c10 .c7 {
  width: 13rem;
}

.c10 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c10 .c3 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <span
    className="c3 c4"
    fontSize="xsmall"
  >
    5/50
  </span>
  <div
    className="c5 "
  >
    <input
      className="c6 c7 c8 "
      id="FieldTextID"
      name="thumbsUp"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <div
    className="c9 "
  />
</div>
`;

exports[`A FieldText with label inline 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c8 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c8 .c7 {
  grid-area: messages;
}

.c8 .c5 {
  width: 13rem;
}

.c8 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c11 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c10 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      id="FieldTextID"
      name="thumbsUp"
      type="text"
    />
  </div>
  <div
    className="c7 "
  />
</div>
`;

exports[`A FieldText with validationMessage and  with label inline 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
  border-color: #ED3B53;
}

.c6:hover {
  border-color: #CC1F36;
}

.c6:focus,
.c6:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 {
  font-size: 0.75rem;
  color: #CC1F36;
}

.c10 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c10 .c7 {
  grid-area: messages;
}

.c10 .c5 {
  width: 13rem;
}

.c10 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c10 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c11 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      id="FieldTextID"
      name="thumbsUp"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <div
    className="c7 "
  >
    <div
      className="c8 c9"
    >
      validation Message
    </div>
  </div>
</div>
`;

exports[`A FieldText with validationMessage and with default label 1`] = `
.c4 {
  height: 36px;
}

.c4::-webkit-input-placeholder {
  color: #939BA5;
}

.c4::-moz-placeholder {
  color: #939BA5;
}

.c4:-ms-input-placeholder {
  color: #939BA5;
}

.c4::placeholder {
  color: #939BA5;
}

.c4:hover {
  border-color: #C1C6CC;
}

.c4:focus,
.c4:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
  border-color: #ED3B53;
}

.c6:hover {
  border-color: #CC1F36;
}

.c6:focus,
.c6:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 {
  font-size: 0.75rem;
  color: #CC1F36;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c5 {
  width: 13rem;
}

.c0 .c11 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c10 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c10 .c7 {
  grid-area: messages;
}

.c10 .c5 {
  width: 13rem;
}

.c10 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c10 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <input
      className="c4 c5 c6 "
      id="FieldTextID"
      name="thumbsUp"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <div
    className="c7 "
  >
    <div
      className="c8 c9"
    >
      validation Message
    </div>
  </div>
</div>
`;
